# docbox-cli

./: .gitignore  Cargo.toml  README.md  cspell.json  dist-workspace.toml
.github/workflows/: release.yml
src/: database.rs  main.rs
