[package]
name = "docbox-cli"
version = "0.4.0"
edition = "2024"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/docbox-nz/docbox-cli"
readme = "./README.md"
license = "MIT"

[dependencies]
# Environment variables
dotenvy = "=0.15.7"

# Command line parser
clap = { version = "=4.5.40", features = ["derive"] }

# Core business logic
docbox-core = { version = "0.4.0" }

# Database access
docbox-database = { version = "0.4.0" }

# Search access
docbox-search = { version = "0.4.0" }

# Management access
docbox-management = { version = "0.2.0" }

# Secrets management
docbox-secrets = { version = "0.1.0" }

# Storage access
docbox-storage = { version = "0.1.0" }

# Asynchronous runtime & Helpers
tokio = { version = "=1.46.1", features = ["full"] }

# Serialization and JSON
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"

# Logging
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }

# Error handling
anyhow = "=1.0.98"
thiserror = "=2.0.12"
eyre = "=0.6.12"
color-eyre = "=0.6.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
