[package]
name = "docbox-cli"
version = "0.5.0"
edition = "2024"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/docbox-nz/docbox-cli"
readme = "./README.md"
license = "MIT"

[dependencies]
# Environment variables
dotenvy = "=0.15.7"

# Command line parser
clap = { version = "=4.5.40", features = ["derive"] }

# Core business logic
docbox-core = { version = "0.6.0" }
# Database access
docbox-database = { version = "0.6.0" }
# Search access
docbox-search = { version = "0.6.0" }
# Management access
docbox-management = { version = "0.4.0" }
# Secrets management
docbox-secrets = { version = "0.3.0" }
# Storage access
docbox-storage = { version = "0.3.0" }

# Asynchronous runtime & Helpers
tokio = { version = "=1.48.0", features = ["full"] }

# Serialization and JSON
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"

# Logging
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }

# Sending requests to the API server
reqwest = {  version = "=0.12.24", features = ["json", "stream"] }

# Error handling
thiserror = "=2.0.17"
eyre = "=0.6.12"
color-eyre = "=0.6.5"
tracing-indicatif = "0.3.13"
comfy-table = "7.2.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# [patch.crates-io]
# docbox-core = { version = "0.6.0", path = "../docbox/packages/docbox-core" }
# docbox-database = { version = "0.6.0", path = "../docbox/packages/docbox-database" }
# docbox-search = { version = "0.6.0", path = "../docbox/packages/docbox-search" }
# docbox-management = { version = "0.4.0", path = "../docbox/packages/docbox-management" }
# docbox-secrets = { version = "0.3.0", path = "../docbox/packages/docbox-secrets" }
# docbox-storage = { version = "0.3.0", path = "../docbox/packages/docbox-storage" }
