[package]
name = "docbox-cli"
version = "0.8.0"
edition = "2024"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/docbox-nz/docbox-cli"
readme = "./README.md"
license = "MIT"

[dependencies]
# Environment variables
dotenvy = "=0.15.7"

# Command line parser
clap = { version = "=4.5.54", features = ["derive"] }

# Management access
docbox-management = { version = "0.10.0" }

# Asynchronous runtime & Helpers
tokio = { version = "=1.49.0", features = ["full"] }

# Serialization and JSON
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

# Logging
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }

# Error handling
thiserror = "=2.0.18"
eyre = "=0.6.12"
color-eyre = "=0.6.5"
tracing-indicatif = "0.3.13"
comfy-table = "7.2.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# [patch.crates-io]
# docbox-management = { version = "0.10.0", path = "../docbox/packages/docbox-management" }
